# wordext

./: Cargo.toml  README.md  words
src/: main.rs
