[package]
name = "wordext"
version = "1.0.0"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
edition = "2018"
description = "Extracts the nth word of a line, or lines read from stdin and writes them to stdout"
license = "MIT"
repository = "https://github.com/TotalKrill/wordext.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.22"
